@@ -77,8 +77,12 @@
 <dl>
   <dt>This version:</dt>
   <dd>
-    <a href="[VERSION]">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
+    <a href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
     <!--http://www.w3.org/TR/[YEAR]/WD-[SHORTNAME]-[CDATE]/-->
+  </dd>
+  <dt>Latest version:
+  <dd>
+    <a href="http://www.w3.org/TR/filter-effects/">[LATEST]</a>
   </dd>
   <dt>Editors:</dt>
   <dd class="vcard">
