@@ -75,14 +75,20 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 21 June 2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 22 June 2012</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
-     href="http://www.w3.org/TR/2012/ED-unknown-shortname-20120621/">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-unknown-shortname-20120621/-->
+     href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
+     <!--http://www.w3.org/TR/2012/WD-filter-effects-20120622/-->
+
+    <dt>Latest version:
+
+    <dd> <a
+     href="http://www.w3.org/TR/filter-effects/">http://www.w3.org/TR/filter-effects/</a>
+     
 
     <dt>Editors:
 
@@ -164,8 +170,8 @@
    mailing list <a href="mailto:public-fx@w3.org">public-fx@w3.org</a> (see
    <a href="http://www.w3.org/Mail/Request">instructions</a>) is preferred
    for discussion of this specification. When sending e-mail, please put the
-   text “unknown-shortname” in the subject, preferably like this:
-   “[<!---->unknown-shortname<!---->] <em>…summary of comment…</em>”
+   text “filter-effects” in the subject, preferably like this:
+   “[<!---->filter-effects<!---->] <em>…summary of comment…</em>”
 
   <p>This document was produced by the <a
    href="http://www.w3.org/Style/CSS/members">CSS Working Group</a> (part of
