@@ -3,6 +3,10 @@ Changes for Filter Effects specification
 
 2012-06-20  Dirk Schulze  <dschulze@adobe.com>
 
+- Change short hand to 'filter-effects' ny adding a link to TR state of spec
+
+2012-06-20  Dirk Schulze  <dschulze@adobe.com>
+
 - Cleanup of feCustom section
 
 2012-06-20  Dirk Schulze  <dschulze@adobe.com>
